Update contact.html Email address

--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -194,7 +194,7 @@
                 <p>🗨️ Let's discuss your next project!</p>
                 
                 <div class="contact-details">
-                    <p>📧 <strong>Email:</strong> <a href="mailto:sumeena@example.com">sumeena@example.com</a></p>
+                    <p>📧 <strong>Email:</strong> <a href="mailto:sumeena@example.com">sumeenasudhir.s@gmail.com</a></p>
                     <p>📱 <strong>Phone:</strong> <a href="tel:+1234567890">+1 (234) 567-890</a></p>
                 </div>
 
